--- a/index.html
+++ b/index.html
@@ -1,14 +1,276 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>memo V2</title>
-  </head>
-  <body>
-    <h1>memo V2</h1>
-    <p>新しいメモです</p>
-    <a href="https://www.google.com">Google検索</a>
-    <br>
-    <p>developer : norifumi</p>
-  </body>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <title>3-6 memo V2</title>
+  <style>
+    /* === リセット === */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      height: 100vh;
+      overflow: hidden;
+      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+      color: #e6edf3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    /* === 星空キャンバス === */
+    #stars {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    /* === パネル === */
+    .container {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 1.2s ease, transform 1s ease;
+      background: rgba(255,255,255,0.05);
+      backdrop-filter: blur(10px);
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.1);
+      padding: 25px 30px;
+      width: 420px;
+      max-width: 90%;
+      text-align: center;
+    }
+
+    .container.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    h1 {
+      margin-bottom: 10px;
+      color: #58a6ff;
+    }
+
+    a {
+      color: #58a6ff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    textarea {
+      width: 100%;
+      height: 80px;
+      margin-top: 10px;
+      border-radius: 8px;
+      border: none;
+      padding: 10px;
+      resize: none;
+      font-size: 14px;
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+    }
+
+    button {
+      margin-top: 10px;
+      background: #238636;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      background: #2ea043;
+    }
+
+    .shared-info {
+      background: rgba(255,255,255,0.1);
+      border-radius: 8px;
+      padding: 10px;
+      margin-bottom: 15px;
+      font-size: 14px;
+      text-align: left;
+    }
+
+    .memo-list {
+      margin-top: 15px;
+      text-align: left;
+      max-height: 200px;
+      overflow-y: auto;
+    }
+
+    .memo-item {
+      background: rgba(255,255,255,0.08);
+      border-radius: 6px;
+      padding: 8px;
+      margin-bottom: 8px;
+      font-size: 13px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .memo-item span {
+      word-break: break-all;
+    }
+
+    .delete-btn {
+      background: #da3633;
+      border: none;
+      color: #fff;
+      border-radius: 5px;
+      font-size: 11px;
+      cursor: pointer;
+      padding: 4px 8px;
+    }
+
+    .delete-btn:hover {
+      background: #f85149;
+    }
+
+    .footer {
+      font-size: 12px;
+      margin-top: 15px;
+      color: #8b949e;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="stars"></canvas>
+
+  <div class="container" id="panel">
+    <h1>3-6 memo V2</h1>
+    <div class="shared-info" id="sharedInfo">
+      <strong>共有情報:</strong><br>
+      <span id="sharedText">新しいアップデートが予定されています。</span>
+    </div>
+
+    <p>あなたのメモを追加できます</p>
+    <textarea id="memoInput" placeholder="ここにメモを入力..."></textarea>
+    <button id="saveBtn">メモを追加</button>
+
+    <div class="memo-list" id="memoList"></div>
+
+    <a href="https://www.google.com" target="_blank">Google検索</a>
+    <div class="footer">developer : norifumi</div>
+  </div>
+
+  <script>
+    /* === 星空背景 === */
+    const canvas = document.getElementById("stars");
+    const ctx = canvas.getContext("2d");
+    let stars = [];
+
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+
+    class Star {
+      constructor() {
+        this.x = Math.random() * canvas.width;
+        this.y = Math.random() * canvas.height;
+        this.size = Math.random() * 1.5;
+        this.speed = Math.random() * 0.1 + 0.05;
+      }
+      update() {
+        this.y += this.speed;
+        if (this.y > canvas.height) {
+          this.y = 0;
+          this.x = Math.random() * canvas.width;
+        }
+      }
+      draw() {
+        ctx.fillStyle = "white";
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+        ctx.fill();
+      }
+    }
+
+    function initStars() {
+      stars = [];
+      for (let i = 0; i < 200; i++) {
+        stars.push(new Star());
+      }
+    }
+
+    function animateStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let s of stars) {
+        s.update();
+        s.draw();
+      }
+      requestAnimationFrame(animateStars);
+    }
+
+    initStars();
+    animateStars();
+
+    /* === フェードインアニメーション === */
+    window.addEventListener("load", () => {
+      document.getElementById("panel").classList.add("show");
+    });
+
+    /* === メモ管理 === */
+    const memoInput = document.getElementById("memoInput");
+    const saveBtn = document.getElementById("saveBtn");
+    const memoList = document.getElementById("memoList");
+
+    function loadMemos() {
+      const memos = JSON.parse(localStorage.getItem("memos")) || [];
+      memoList.innerHTML = "";
+      memos.forEach((m, index) => {
+        const div = document.createElement("div");
+        div.className = "memo-item";
+        div.innerHTML = `<span>${m}</span> <button class="delete-btn" data-index="${index}">削除</button>`;
+        memoList.appendChild(div);
+      });
+    }
+
+    function saveMemo() {
+      const text = memoInput.value.trim();
+      if (!text) return;
+      const memos = JSON.parse(localStorage.getItem("memos")) || [];
+      memos.push(text);
+      localStorage.setItem("memos", JSON.stringify(memos));
+      memoInput.value = "";
+      loadMemos();
+    }
+
+    memoList.addEventListener("click", (e) => {
+      if (e.target.classList.contains("delete-btn")) {
+        const index = e.target.dataset.index;
+        const memos = JSON.parse(localStorage.getItem("memos")) || [];
+        memos.splice(index, 1);
+        localStorage.setItem("memos", JSON.stringify(memos));
+        loadMemos();
+      }
+    });
+
+    saveBtn.addEventListener("click", saveMemo);
+    window.addEventListener("load", loadMemos);
+
+    /* === 管理者共有情報 === */
+    const sharedText = document.getElementById('sharedText');
+    const sharedInfoData = "【共有】ここに管理者からの共有情報が記載されます";
+    sharedText.textContent = sharedInfoData;
+  </script>
+</body>
 </html>
