--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ document.addEventListener("mousemove", (e) => {
 
     /* === 管理者共有情報 === */
     const sharedText = document.getElementById('sharedText');
-    const sharedInfoData = "【共有】ここに管理者からの共有情報が記載されます";
+    const sharedInfoData = "3-6 memoがwebサイトになって帰ってきました！！";
     sharedText.textContent = sharedInfoData;
   </script>
 </body>
